split reports.css.scss into multiple files

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,4 +14,7 @@
  *= require projects
  *= require segments
  *= require reports
+ *= require metrics
+ *= require report_tabs
+ *= require dimensions
 */
