--- a/app/assets/stylesheets/metrics.css.scss
+++ b/app/assets/stylesheets/metrics.css.scss
@@ -1,6 +1,9 @@
-.metric-add {
-  border-collapse: collapse;
-  border: 1px dashed;
+.metric-box {
+  margin-right: 10px;
+  height: 35px;
+}
+
+@mixin metric-common{
   border-radius: 3px 3px 3px 3px;
   cursor: pointer;
   font-size: 13px;
@@ -15,66 +18,66 @@
   -webkit-border-top-right-radius: 3px;
   -webkit-border-bottom-left-radius: 3px;
   -webkit-border-bottom-right-radius: 3px;
+}
 
+.metric-add {
+  border: 1px dashed #7B98E8;
   background: #F2F6FF;
-  border-color: #7B98E8;
   color: #7B98E8;
-
-  visibility: visible;
+  @include metric-common;
 }
 
-.metric_box {
-  margin-right: 10px;
-  height: 35px;
+.metric-display {
+  border: 1px solid #51649E;
+  color: white;
+  white-space: nowrap;
+  background-color: #8FACFC;
+  float: left;
+  @include metric-common;
 }
 
-.ly {
+.metric-remove {
   background: no-repeat url(/assets/sprites.png) -527px -173px;
   cursor: pointer;
   float: left;
   height: 12px;
-  margin: 3px 1px;
-  margin-left: -7px;
-  margin-top: 11px;
+  margin: 11px 0 0 -7px;
   width: 12px;
 }
 
-.metric_container {
-  background-color: white;
-  border: 1px solid #B0B0B0;
-  position: absolute;
-  visibility: hidden;
-  z-index: 10;
-}
-
-.metric_display {
-  background: transparent url(/assets/menu_down_light.gif) no-repeat scroll 95% 50%;
-  border-radius: 3px 3px 3px 3px;
-  border-style: solid;
-  border-width: 1px;
-  color: white;
-  cursor: pointer;
-  font-weight: bold;
-  float: left;
-  height: 26px;
-  margin: 3px 10px 3px 0;
-  padding: 0;
-  -moz-border-radius: 3px 3px 3px 3px;
-  -webkit-border-top-left-radius: 3px;
-  -webkit-border-top-right-radius: 3px;
-  -webkit-border-bottom-left-radius: 3px;
-  -webkit-border-bottom-right-radius: 3px;
-  white-space: nowrap;
-  width: 206px;
-
-  background-color: #8FACFC;
-  border-color: #51649E;
-  text-align: center;
-}
-
-.metric_label {
-  margin: 5px 20px 5px 5px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+.metrics-dropdown{
+  width: 208px;
+  .metric-search{
+    border: 1px solid #CCC;
+    margin: 0 5px 0 5px;
+    input{
+      border: 0;
+      width: 165px;
+    }
+  }
+  .metric-list{
+    height: 200px;
+    max-height: 200px;
+    min-height: 200px;
+    padding: 2px 10px 2px 5px;
+    position: relative;
+    overflow: auto;
+  }
+  .metric{
+    border: 1px solid #2F67B4;
+    background-color:  #C5DCFE;
+    color: #2F67B4;
+    margin: 1px 1px 1px 0;
+    cursor: pointer;
+    font-size: 0.9em;
+    font-weight: bold;
+    padding: 4px 3px 4px 5px;
+  }
+  .metric.selected{
+    background-color: #6FAEFD;
+    color: white;
+  }
+  .metric-new{
+    cursor: pointer;
+  }
 }
