override bootstrap open dropdown toggle style for bootstrap 2.0.2

--- a/app/assets/stylesheets/metrics.css.scss
+++ b/app/assets/stylesheets/metrics.css.scss
@@ -22,8 +22,8 @@
 
 .metric-add {
   border: 1px dashed #7B98E8;
-  background: #F2F6FF;
-  color: #7B98E8;
+  background: #F2F6FF !important;
+  color: #7B98E8 !important;
   @include metric-common;
 }
 
