when show project get detailed metric info and don't request server for edit metric

--- a/app/views/template/projects/index.haml
+++ b/app/views/template/projects/index.haml
@@ -45,7 +45,7 @@
   });
 
   window.metrics_router = new Analytics.Routers.MetricsRouter({
-    metrics: #{Metric.template.where(:combine_id => nil).map(&:short_attributes).to_json}
+    metrics: #{Metric.template.where(:combine_id => nil).map(&:js_attributes).to_json}
   });
 
   window.report_tabs_router = new Analytics.Routers.ReportTabsRouter({});
