--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -24,6 +24,17 @@ body {
   border-bottom: 1px solid #CCC;
 }
 
+.container-header{
+  margin-bottom: 5px;
+  .container-info{
+    padding: 10px 0 0 10px;
+    min-height: 18px;
+  }
+  .container-title{
+    margin-right: 5px;
+  }
+}
+
 table.main-table{
   width: 100%;
   height: 100%;
