--- a/app/assets/stylesheets/metrics.css.scss
+++ b/app/assets/stylesheets/metrics.css.scss
@@ -10,7 +10,7 @@
   font-weight: bold;
   height: 16px;
   margin: 3px 10px 3px 0;
-  padding: 5px;
+  padding: 3px 5px 5px 5px;
   text-align: center;
   width: 196px;
   -moz-border-radius: 3px 3px 3px 3px;
@@ -56,9 +56,6 @@
     }
   }
   .metric-list{
-    height: 200px;
-    max-height: 200px;
-    min-height: 200px;
     padding: 2px 10px 2px 5px;
     position: relative;
     overflow: auto;
