commit css for range picker

--- a/app/assets/stylesheets/report_tabs.css.scss
+++ b/app/assets/stylesheets/report_tabs.css.scss
@@ -17,42 +17,18 @@
 
 .report-tab-range-picker{
   .range-control{
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
     min-width: 250px;
-    overflow: hidden;
-    position: relative;
-    cursor: pointer;
-    border: 1px solid #CCC;
-    border-radius: 5px 5px 5px 5px;
-    padding: 0 !important;
     table{
       width: 100%;
       td{
         height: 38px;
-        text-align: center;
-        span{
-          text-align: center;
-        }
         div.compare-info{
           line-height: 12px;
         }
-        padding: 0px 2px 0px 2px;
-      }
-      td.toggle{
-        background-color:#F7F7F7;
-        width: 25px;
-        span{
-          color:#B2B2B2;
-          text-align:center;
-          padding-top: 10px;
-          border-radius: 0 5px 5px 0;
-        }
       }
     }
-
   }
-  .range-control-dropdown-menu{
+  .dropdown-menu{
     min-width: 250px;
     li.range-datepicker{
       padding: 3px 15px;
