margin bottom from timelines to kpis

--- a/app/assets/stylesheets/report_tabs.css.scss
+++ b/app/assets/stylesheets/report_tabs.css.scss
@@ -62,8 +62,10 @@
   }
 }
 
-.report-tab-chart{
-  margin-bottom: 40px;
+.tab-container{
+  .timelines{
+    margin-bottom: 40px;
+  }
 }
 
 .datepicker-input{
