use Google jquery & jquery-ui CDN and remove some unused js files

--- a/app/views/layouts/template.haml
+++ b/app/views/layouts/template.haml
@@ -10,10 +10,11 @@
     /[if lt IE 9]
       = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
     / Le styles
-    
+    = javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"
+    = javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"
     = javascript_include_tag "#{BasisService.base_url}/xingcloud.js?project_id=&select=analytic"
-    = stylesheet_link_tag    "application"
     = javascript_include_tag "application"
+    = stylesheet_link_tag    "application"
     = yield :head
 
     = yield
