change default name

--- a/app/views/layouts/template.haml
+++ b/app/views/layouts/template.haml
@@ -2,7 +2,7 @@
 %html{:lang => "en"}
   %head
     %meta{:charset => "utf-8"}/
-    %title= content_for?(:title) ? yield(:title) : "XingCloud Analytic"
+    %title= content_for?(:title) ? yield(:title) : "行云数据分析"
     = csrf_meta_tags
 
     = favicon_link_tag '/favicon.png', :type => 'image/png'
