--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -54,11 +54,27 @@ table.main-table{
           color: #999;
           padding: 5px 5px 5px 10px;
         }
+        .reports-manage{
+          cursor: pointer;
+          width: 32px;
+          i{
+            margin-left: 9px;
+          }
+        }
+        .reports-manage:hover{
+          background-color: whiteSmoke;
+          border-radius: 5px;
+        }
+        ul li.nav-header{
+          margin-top: 0;
+        }
         ul li.custom-report{
           padding-left: 5px;
         }
         ul{
           border-bottom: 1px solid #CCC;
+          overflow: auto;
+          max-height: 300px;
         }
       }
     }
