add Google Analytics tracking

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -20,3 +20,15 @@
     #container
       = yield
     = javascript_include_tag "#{BasisService.base_url}/xingcloud.js?project_id=#{@project.identifier}&select=analytic"
+
+
+    :javascript
+      var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-32275811-1']);
+        _gaq.push(['_trackPageview']);
+
+        (function() {
+          var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+          ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
