--- a/app/views/projects/show.haml
+++ b/app/views/projects/show.haml
@@ -6,6 +6,11 @@
   window.project = new Analytics.Models.Project(#{@project.js_attributes.to_json});
   window.projects_router = new Analytics.Routers.ProjectsRouter();
 
+  window.user_attributes_router = new Analytics.Routers.UserAttributesRouter({
+    project: project,
+    user_attributes: #{@project.user_attributes.map(&:attributes).to_json}
+  });
+
   window.segments_router = new Analytics.Routers.SegmentsRouter({
     project: project,
     segments: #{@project.segments.map(&:js_attributes).to_json},
