--- a/app/views/template/projects/index.haml
+++ b/app/views/template/projects/index.haml
@@ -36,6 +36,10 @@
         = will_paginate @projects
 
 :javascript
+  window.user_attributes_router = new Analytics.Routers.UserAttributesRouter({
+    user_attributes: []
+  });
+
   window.segments_router = new Analytics.Routers.SegmentsRouter({
     segments: #{Segment.template.map(&:js_attributes).to_json}
   });
