add event level name settings

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -140,7 +140,7 @@ table.main-table{
   color: black;
 }
 
-#error-message{
+.message{
   margin-bottom: 0px !important;
   text-align: center;
   position: fixed;
