--- a/app/views/projects/show.haml
+++ b/app/views/projects/show.haml
@@ -2,4 +2,5 @@
   window.XAUSER = "#{session[:cas_user]}";
   window.XA.init({app: "xaa", uid: XAUSER});
   Instances.Models.project = new Analytics.Models.Project(#{@project.js_attributes.to_json});
+  Instances.Models.setting = new Analytics.Models.Setting(#{@project.setting.present? ? @project.setting.attributes.to_json : {}});
   Instances.Models.project.loading();
