add metric duplication

--- a/app/assets/stylesheets/metrics.css.scss
+++ b/app/assets/stylesheets/metrics.css.scss
@@ -44,6 +44,11 @@
   margin: 11px 0 0 -7px;
   width: 12px;
 }
+.metric-copy {
+  cursor: pointer;
+  margin: 8px 0 0 0px;
+  opacity: 0.3;
+}
 
 .metrics-dropdown{
   width: 208px;
