--- a/app/assets/stylesheets/metrics.css.scss
+++ b/app/assets/stylesheets/metrics.css.scss
@@ -44,7 +44,7 @@
   margin: 11px 0 0 -7px;
   width: 12px;
 }
-.metric-copy {
+.metric-operation {
   cursor: pointer;
   margin: 8px 0 0 0px;
   opacity: 0.3;
