system message broadcasting added

--- a/app/views/template/projects/index.haml
+++ b/app/views/template/projects/index.haml
@@ -20,6 +20,10 @@
             %a{:href => "#/dashboard"}
               %i.icon-user
               通用数据面板管理
+          %li
+            %a{:href => "#/broadcasting"}
+              %i.icon-user
+              公告栏管理
     .span10
       #main-container
         %h3 项目列表
@@ -44,7 +48,8 @@
     reports: new Analytics.Collections.Reports(#{Report.template.map(&:js_attributes).to_json}),
     report_tabs: new Analytics.Collections.ReportTabs([]),
     widgets: new Analytics.Collections.Widgets(#{Widget.template.map(&:js_attributes).to_json}),
-    metrics: new Analytics.Collections.Metrics(#{Metric.template.where(:combine_id => nil).map(&:js_attributes).to_json})
+    metrics: new Analytics.Collections.Metrics(#{Metric.template.where(:combine_id => nil).map(&:js_attributes).to_json}),
+    broadcastings: new Analytics.Collections.Broadcastings(#{Broadcasting.all.map(&:js_attributes).to_json})
   };
   Instances.Collections.reports.init_report_tabs();
   Instances.Collections.segments.init_expressions();
@@ -52,6 +57,7 @@
     report_categories_router: new Analytics.Routers.ReportCategoriesRouter(),
     reports_router: new Analytics.Routers.ReportsRouter(),
     segments_router: new Analytics.Routers.SegmentsRouter(),
-    widgets_router: new Analytics.Routers.WidgetsRouter()
+    widgets_router: new Analytics.Routers.WidgetsRouter(),
+    broadcasting_router: new Analytics.Routers.BroadcastingRouter()
   };
   Backbone.history.start();
