--- a/app/views/template/projects/index.haml
+++ b/app/views/template/projects/index.haml
@@ -22,7 +22,7 @@
               通用数据面板管理
           %li
             %a{:href => "#/broadcasting"}
-              %i.icon-user
+              %i.icon-volume-up
               公告栏管理
     .span10
       #main-container
