supports reloading data when some data is pending

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -56,6 +56,10 @@
     position: relative;
     width: 100%;
 
+    .pending{
+      color: #DDDDDD;
+      font-size: 80%;
+    }
     td {
       border-bottom: 1px solid #DDD;
       border-right: 1px solid #DDD;
