add p tag to announcement

--- a/app/views/maintenance_plans/show.haml
+++ b/app/views/maintenance_plans/show.haml
@@ -20,8 +20,9 @@
         %a{:href => "mailto:xa@xingcloud.com"}
           xa@xingcloud.com
     - else
-      服务暂不可用，请稍后访问，如有问题请洽
-      %a{:href => "mailto:xa@xingcloud.com"}
-        xa@xingcloud.com
+      %p.announcement
+        服务暂不可用，请稍后访问，如有问题请洽
+        %a{:href => "mailto:xa@xingcloud.com"}
+          xa@xingcloud.com
   .span4
 
