--- a/app/views/projects/show.haml
+++ b/app/views/projects/show.haml
@@ -1,4 +1,7 @@
 :javascript
+  I18n.fallbacks = true;
+  I18n.defaultlocale = "en";
+  I18n.locale = "#{I18n.locale}";
   window.XAUSER = "#{session[:cas_user]}";
   window.XA.init({app: "xaa", uid: XAUSER});
   Instances.Models.project = new Analytics.Models.Project(#{@project.js_attributes.to_json});
