change static variables to functions

--- a/app/views/projects/show.haml
+++ b/app/views/projects/show.haml
@@ -1,5 +1,5 @@
 :javascript
-  I18n.fallbacks = true;
+  //I18n.fallbacks = true;
   I18n.defaultlocale = "en";
   I18n.locale = "#{I18n.locale}";
   window.XAUSER = "#{session[:cas_user]}";
