--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -1,5 +1,5 @@
 body {
-  padding-top: 56px; /* 60px to make the container go all the way to the bottom of the topbar */
+  //padding-top: 56px; /* 60px to make the container go all the way to the bottom of the topbar */
 }
 
 .main{
