--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -11,8 +11,8 @@
     /[if lt IE 9]
       = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
     / Le styles
-    = javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"
-    = javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"
+    = javascript_include_tag "http://lib.sinaapp.com/js/jquery/1.7.2/jquery.min.js"
+    = javascript_include_tag "http://lib.sinaapp.com/js/jquery-ui/1.8.11/jquery-ui.min.js"
     = javascript_include_tag "application"
     = stylesheet_link_tag    "application"
 
