--- a/app/views/projects/show.haml
+++ b/app/views/projects/show.haml
@@ -1,9 +1,9 @@
 - if @user
   :javascript
     Instances.Models.user = new Analytics.Models.User(#{@user.js_attributes.to_json});
-- else
+- else -#查找不到该用户当系统管理员处理(前提:该用户已经通过了该项目的认证)
   :javascript
-    Instances.Models.user = new Analytics.Models.User({role:"admin",name:"#{session[:cas_user]}"})
+    Instances.Models.user = new Analytics.Models.User({role:"admin",name:"#{session[:cas_user]}"}) 
 
 :javascript
   //I18n.fallbacks = true;
