--- a/app/assets/stylesheets/dimensions.css.scss
+++ b/app/assets/stylesheets/dimensions.css.scss
@@ -214,28 +214,12 @@
 
 .dimensions-panel{
   .dimension-tags{
-    .dimension-tag-splitter{
-      float: left;
+    .divider{
+      line-height: 24px;
     }
     .dimension-tag{
-      list-style: none;
-      float: left;
-      border-radius: 6px;
-      -moz-border-radius: 6px;
-      -webkit-border-radius: 6px;
-      background-color: #EEE;
-      padding: 2px 2px 2px 4px;
-      position: relative;
-      line-height: 20px;
-      img{
-        cursor: move;
-      }
-      span{
-        cursor: pointer;
-      }
-      margin: 0 3px 0 3px;
+      cursor: pointer;
     }
-
     .dimension-tag:hover{
       color: white;
       background-color: #08C;
@@ -244,19 +228,14 @@
       color: white;
       background-color: #08C;
     }
-
-    float: left;
-    margin: 0;
-  }
-  .sign{
-    float: left;
-    margin-top: 5px;
   }
   .add-dimension{
-    padding-left: 10px;
     ul{
       max-height: 200px;
       overflow: auto;
+      li a{
+        cursor: pointer;
+      }
     }
   }
 }
