--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -9,7 +9,8 @@
   -webkit-border-radius: 10px;
   z-index: 1000;
   background-color: white;
-  table{
+  .control-panels-container{
+    margin: 3px 0 3px 0;
     width: 100%;
     td.filters{
       padding-left: 5px;
@@ -19,6 +20,23 @@
     }
     td.range-picker{
       padding-right: 5px;
+      .report-tab-actions{
+        float: right;
+        .action.edit-report a{
+          text-decoration: none;
+          color: #333;
+        }
+        .action{
+          margin: 5px 4px 0 0;
+          float: left;
+          color: #333;
+          cursor: pointer;
+        }
+      }
     }
   }
+}
+
+.report-panel.affix{
+  top: 0;
 }
