--- a/app/assets/stylesheets/segments.css.scss
+++ b/app/assets/stylesheets/segments.css.scss
@@ -105,3 +105,34 @@
     position: relative;
     text-align: center;
 }
+
+.segments-panel{
+  margin-top: 2px;
+  .add-segment{
+    ul{
+      .segment-list{
+        max-height: 200px;
+        padding: 2px 10px 2px 5px;
+        position: relative;
+        overflow: auto;
+        .segment{
+          border: 1px solid #2F67B4;
+          background-color:  #C5DCFE;
+          color: #2F67B4;
+          margin: 1px 1px 1px 0;
+          cursor: pointer;
+          font-size: 0.9em;
+          font-weight: bold;
+          padding: 4px 3px 4px 5px;
+        }
+        .segment:hover{
+          background-color: #6FAEFD;
+          color: white;
+        }
+      }
+      .manage-segments{
+        cursor: pointer;
+      }
+    }
+  }
+}
