--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -19,6 +19,7 @@
       }
     }
     td.range-picker{
+      min-width: 320px;
       padding-right: 5px;
       .report-tab-actions{
         float: right;
