report control pannel style change to bootstrap navbar

--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -3,12 +3,12 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .report-panel{
-  border: 1px solid grey;
+  z-index: 1001;
+/*  border: 1px solid grey;
   border-radius: 10px;
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
-  z-index: 1000;
-  background-color: white;
+  background-color: white;*/
   .control-panels-container{
     margin: 3px 0 3px 0;
     width: 100%;
