style modification for panel bar

--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -9,6 +9,10 @@
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
   background-color: white;*/
+  .navbar-inner{
+    padding-left: 0px;
+    padding-right: 0px;
+  }
   .control-panels-container{
     margin: 3px 0 3px 0;
     width: 100%;
